Mathis changed button name

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ Dans les choix qui vont suivre, nous vous demandons la somme d’argent que vous
 <p><img src="Pictures/coût.png" alt="Coût de la gestion des plages"></p>
 <p>Merci d’avoir pris le temps de lire cette introduction, vous allez maintenant être redirigé vers le questionnaire</p>
 <button id="exit" onclick="window.location.href='https://mathisgillio.github.io/redirect-dissertation-repository/';">
-      Go to survey!
+      Commencer le questionnaire!
     </button>
 <script> 
 $(document).ready(function() { 
