Mathis corrected a few typos

--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@ Dans les choix qui vont suivre nous vous demandons de prendre en compte trois di
 Coût de cette plage
 </h2>
 <p>
-Dans les choix qui vont suivre, nous vous demandons la somme d’argent que vous seriez prêt à ajouter à vos taxes annuellement si vous étiez sûr que votre argent serait directement utilisé pour la gestion des plages :
+Parmis les 4 options suivantes, nous vous demandons de choisir la somme d’argent que vous seriez prêt à ajouter à vos taxes annuellement si vous étiez sûr que votre argent serait directement utilisé pour la gestion des plages : 
 <p>
 </p>
 <p><img src="Pictures/coût.png" alt="Coût de la gestion des plages"></p>
 <p>Merci d’avoir pris le temps de lire cette introduction, vous allez maintenant être redirigé vers le questionnaire</p>
 <button id="exit" onclick="window.location.href='https://mathisgillio.github.io/redirect-dissertation-repository/';">
-      Commencer le questionnaire!
+      Commencer le questionnaire !
     </button>
 <script> 
 $(document).ready(function() { 
