Mathis changed biodiveristy attribute

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ Introduction
 Le but de cette recherche est de de comprendre la manière dont les résidents du sud de la France perçoivent la gestion des plages. Les informations que vous nous fournissez pourraient être utilisé pour influencer la manière dont les plages sont gérées.
 </p>
 <p>
-Merci de prendre le temps de lire les notes explicatives, elles vous seront utiles pour répondre au questionnaire.
+<b>Merci de prendre le temps de lire les notes explicatives, elles vous seront utiles pour répondre au questionnaire.</b>
 <p>
 </p>
 <h1>
@@ -30,10 +30,13 @@ Dans les choix qui vont suivre nous vous demandons de prendre en compte trois ni
 <p>
 </p>
 <p><img src="Pictures/qualité-de-l'eau.png" alt="Qualité de l'eau"></p>
+
+<b>Ici, la qualité de l'eau n'est pas liée à la santé de la vie sous-marine</b>
+
 <h2>
 Éléments sur la plage
 </h2>
-Deux types de dépots peuvent se retrouver sur la plage. D’une part, il y a les déchets de source humaines comme les mégots de cigarette, boûts de verre et de plastique. D’une autre part, il y aussi des dépots naturels tels que les banquettes d’herbes marines mortes ou plus communément appelés algues. Ces banquettes sont une défence naturelle contre l’érosion.
+Deux types de dépots peuvent se retrouver sur la plage. D’une part, il y a les déchets de source humaines comme les mégots de cigarette, boûts de verre et de plastique. D’une autre part, il y aussi des dépots naturels tels que les banquettes d’herbes marines mortes ou plus communément appelées algues. Ces banquettes sont une défence naturelle contre l’érosion.
 </p>
 <p>
 Dans les choix qui vont suivre nous vous demandons de prendre en compte trois différents gestions des éléments sur la plage:
@@ -53,13 +56,13 @@ Dans les choix qui vont suivre nous vous demandons de prendre en compte trois di
 
 <h2>Biodiversité</h2>
 
-<p>La biodiversité d’un environnement est caractérisée par le nombre d’éspèces que cet environnement contient. Une grande biodiversité est souvent assimilée à un environnement sain. Sur les plages, cette biodiversité est caractérisée par le nombre d’espèces de plantes, de crustacés et d’oiseaux.</p>
+<p>La biodiversité d’un environnement est caractérisée par le nombre d’éspèces que cet environnement contient. Une grande biodiversité est souvent assimilée à un environnement sain. Sur les plages, cette biodiversité est caractérisée par le nombre d’espèces de plantes et de crustacés. Dans l'eau, cette biodiveristé est caractérisée par le nombre de poissons et d'algues.</p>
 </p>
 <p>
 Dans les choix qui vont suivre nous vous demandons de prendre en compte trois différents niveaux de biodiversité:
 <p>
 </p>
-<p><img src="Pictures/biodiversité.png" alt="biodiversité sur la plage"></p>
+<p><img src="Pictures/biodiversité-final.png" alt="biodiversité du littoral"></p>
 <h2>
 Coût de cette plage
 </h2>
